tests/specs/graph/fast_check/issue_23658_2.txt
# https://jsr.io/@scope/a/meta.json
{"versions": { "1.0.0": {} } }

# https://jsr.io/@scope/a/1.0.0_meta.json
{ "exports": { ".": "./mod.ts" } }

# https://jsr.io/@scope/a/1.0.0/base.ts
export class Base {
}

# https://jsr.io/@scope/a/1.0.0/interface.ts
export class IInterface {
}

# https://jsr.io/@scope/a/1.0.0/mod.ts
import { Base } from './base.ts'
import type { IInterface } from './interface.ts';

class ServerAdapter extends Base implements IInterface {
  static adapt() {
  }
}

export const adapt = ServerAdapter.adapt;

# mod.ts
import 'jsr:@scope/a'

# output
{
  "roots": [
    "file:///mod.ts"
  ],
  "modules": [
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "jsr:@scope/a",
          "code": {
            "specifier": "jsr:@scope/a",
            "span": {
              "start": {
                "line": 0,
                "character": 7
              },
              "end": {
                "line": 0,
                "character": 21
              }
            }
          }
        }
      ],
      "size": 22,
      "mediaType": "TypeScript",
      "specifier": "file:///mod.ts"
    },
    {
      "kind": "esm",
      "size": 22,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/base.ts"
    },
    {
      "kind": "esm",
      "size": 28,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/interface.ts"
    },
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "./base.ts",
          "code": {
            "specifier": "https://jsr.io/@scope/a/1.0.0/base.ts",
            "span": {
              "start": {
                "line": 0,
                "character": 21
              },
              "end": {
                "line": 0,
                "character": 32
              }
            }
          }
        },
        {
          "specifier": "./interface.ts",
          "type": {
            "specifier": "https://jsr.io/@scope/a/1.0.0/interface.ts",
            "span": {
              "start": {
                "line": 1,
                "character": 32
              },
              "end": {
                "line": 1,
                "character": 48
              }
            }
          }
        }
      ],
      "size": 209,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/mod.ts"
    }
  ],
  "redirects": {
    "jsr:@scope/a": "https://jsr.io/@scope/a/1.0.0/mod.ts"
  },
  "packages": {
    "@scope/a": "@scope/a@1.0.0"
  }
}

Fast check https://jsr.io/@scope/a/1.0.0/mod.ts:
  error[unknown-var-type]: unknown type for variable in the public API
   --> https://jsr.io/@scope/a/1.0.0/mod.ts:9:14
    |
  9 | export const adapt = ServerAdapter.adapt;
    |              ^^^^^ this variable's type could not be inferred because its initializer
    |                      ------------------- contains this expression, of which the type could not be inferred
    |
    = hint: add an explicit type annotation to the variable declaration

    info: all variables in the public API must have a known type
    info: the type of arbitrary expressions can not be inferred without a type checker
    docs: https://jsr.io/go/slow-type-unknown-var-type

